--- a/Mvc/Views/Design/Blog.cshtml
+++ b/Mvc/Views/Design/Blog.cshtml
@@ -35,29 +35,11 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
+            
                 <form class="form-inline my-2 my-lg-0">
                     <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                 </form>
-            </div>
-        </nav>
+         </nav>
     </div>
 </div>
 <!-- header section end -->
@@ -72,21 +54,21 @@
         <div class="choose_section_2">
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
+                    <div class="blog_img"><img src="~/images/blog-img.png"></div>
                     <h4 class="date_text">01 May</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
                     <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
                     <div class="read_bt1"><a href="#">Read More</a></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
+                    <div class="blog_img"><img src="~/images/blog-img.png"></div>
                     <h4 class="date_text">01 May</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
                     <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
                     <div class="read_bt1"><a href="#">Read More</a></div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
+                    <div class="blog_img"><img src="~/images/blog-img.png"></div>
                     <h4 class="date_text">01 May</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
                     <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
@@ -103,7 +85,7 @@
         <div class="footer_section_2">
             <div class="row">
                 <div class="col-lg-3">
-                    <div class="footeer_logo"><img src="images/logo.png"></div>
+                    <div class="footeer_logo"><img src="~/images/logo.png"></div>
                     <p class="lorem_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
                 </div>
                 <div class="col-lg-3">
