--- a/Mvc/Views/Design/Index.cshtml
+++ b/Mvc/Views/Design/Index.cshtml
@@ -30,32 +30,14 @@
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+            <a class="navbar-brand" href="index.html"><img src="~/images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="blog.html">Blog</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact Us</a>
-                    </li>
-                </ul>
+            </button>             
                 <form class="form-inline my-2 my-lg-0">
                     <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                 </form>
-            </div>
+           
         </nav>
     </div>
 </div>
@@ -107,218 +89,14 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <div class="banner_img"><img src="images/banner-img.png"></div>
+                <div class="banner_img"><img src="~/images/banner-img.png"></div>
             </div>
         </div>
     </div>
 </div>
 <!-- banner section end -->
 <!-- about section start -->
-<div class="about_section layout_padding">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-7">
-                <div class="about_taital_main">
-                    <h1 class="about_taital">About Agency</h1>
-                    <p class="about_text">adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
-                    <div class="readmore_bt"><a href="#">Read More</a></div>
-                </div>
-            </div>
-            <div class="col-md-5 padding_right0">
-                <div class="about_img"><img src="images/about-img.png"></div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- about section end -->
-<!-- projects section start -->
-<div class="projects_section layout_padding">
-    <div class="container">
-        <div class="projects_section_2">
-            <div class="row">
-                <div class="col-md-4">
-                    <h1 class="number_text">01</h1>
-                    <h3 class="project_taital">COMMERCIAL PROJECTS</h3>
-                </div>
-                <div class="col-md-4">
-                    <h1 class="number_text">02</h1>
-                    <h3 class="project_taital">COMMERCIAL PROJECTS</h3>
-                </div>
-                <div class="col-md-4">
-                    <h1 class="number_text">03</h1>
-                    <h3 class="project_taital">COMMERCIAL PROJECTS</h3>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- projects section end -->
-<!-- services section start -->
-<div class="services_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="services_taital">Why Choose Us?</h1>
-            </div>
-        </div>
-        <div class="services_section_2">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Faux Finishes</a></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Water Proofing</a></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Pre-Paint Demo</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="services_section_2">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Mildew Removal</a></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Color Proof</a></div>
-                </div>
-                <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Window Washing</a></div>
-                </div>
-            </div>
-        </div>
-        <div class="read_bt"><a href="#">Read More</a></div>
-    </div>
-</div>
-<!-- services section end -->
-<!-- blog section start -->
-<div class="blog_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="blog_taital">Our Blog</h1>
-            </div>
-        </div>
-        <div class="choose_section_2">
-            <div class="row">
-                <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
-                    <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
-                    <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="blog_img"><img src="images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
-                    <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- blog section end -->
-<!-- client section start -->
-<div class="client_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1 class="client_taital">What Says Customers</h1>
-                <p class="dummy_text">incididunt ut labore et dolore magna aliqua. Ut enim adincididunt ut labore et dolore magna aliqua. Ut enim ad  </p>
-            </div>
-        </div>
-        <div class="client_section_2">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="client_taital_box">
-                        <p class="client_text">onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolor</p>
-                    </div>
-                    <h3 class="moark_text">Brobo Lo</h3>
-                    <h4 class="customer_text">Customer</h4>
-                </div>
-                <div class="col-md-6">
-                    <div class="client_taital_box">
-                        <p class="client_text">onsectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolor</p>
-                    </div>
-                    <h3 class="moark_text">Jesliyo</h3>
-                    <h4 class="customer_text">Customer</h4>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- client section end -->
-<!-- contact section start -->
-<div class="contact_section layout_padding">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h1 class="contact_taital">Get In Touch</h1>
-            </div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="contact_section_2">
-            <div class="row">
-                <div class="col-md-12">
-                    <div class="mail_section_1">
-                        <input type="text" class="mail_text" placeholder="Name" name="Name">
-                        <input type="text" class="mail_text" placeholder="Email" name="Email">
-                        <input type="text" class="mail_text" placeholder="Phone Number" name="Phone Number">
-                        <textarea class="massage-bt" placeholder="Massage" rows="5" id="comment" name="Massage"></textarea>
-                        <div class="send_bt"><a href="#">Send</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- contact section end -->
-<!-- footer section start -->
-<div class="footer_section layout_padding">
-    <div class="container">
-        <div class="footer_section_2">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="footeer_logo"><img src="images/logo.png"></div>
-                    <p class="lorem_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
-                </div>
-                <div class="col-lg-3">
-                    <h4 class="footer_taital">Discover</h4>
-                    <div class="footer_menu">
-                        <ul>
-                            <li><a href="#">Discover</a></li>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Categories</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-3">
-                    <h4 class="footer_taital">Contact Us</h4>
-                    <p class="footer_text">Personal Info Cookie Policy Terms of Us Privacy Policy</p>
-                </div>
-                <div class="col-lg-3">
-                    <h4 class="footer_taital">Newsletter</h4>
-                    <div class="form-group">
-                        <textarea class="update_mail" placeholder="Email" rows="5" id="comment" name="Email"></textarea>
-                        <div class="subscribe_bt"><a href="#">Subscribe</a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <!-- footer section end -->
 <!-- copyright section start -->
 <div class="copyright_section">
