--- a/Mvc/Views/Design/About.cshtml
+++ b/Mvc/Views/Design/About.cshtml
@@ -19,8 +19,7 @@
                 <div class="header_social_icon">
                     <ul>
                         
-                        <li><a href="#"><img class="fa fa-facebook" src="~/images/search.png"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                
+                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
