--- a/Mvc/Views/Design/Blog.cshtml
+++ b/Mvc/Views/Design/Blog.cshtml
@@ -5,37 +5,35 @@
 }
 
 
-<div class="call_text_main">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Location</span></a></div>
-            </div>
-            <div class="col-md-4">
-                <div class="header_social_icon">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">+91 9159880640</span></a></div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <!-- header section start -->
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+            <a class="navbar-brand" href="index.html"><img src="~/images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="About">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Index">Index</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Services">Services</a>
+                    </li>
+                </ul>
+            </div>
                 <form class="form-inline my-2 my-lg-0">
                     <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                 </form>
@@ -55,24 +53,24 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="blog_img"><img src="~/images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
+                    <h4 class="date_text">01 June</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
+                    <p class="ipsum_text">Every once in a while some experts will have a conference and announce that painting is now dead. They are usually referring to somewhat realistic paintings that depict something or other that a more or less average person can understand.</p>
+                    <div class="read_bt1"><a href="https://painterskeys.com/levels-of-achievement/">Read More</a></div>
                 </div>
                 <div class="col-sm-4">
                     <div class="blog_img"><img src="~/images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
+                    <h4 class="date_text">05 Dec</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
+                    <p class="ipsum_text">“Alone we can do so little; together we can do so much.” -Helen Keller Teamwork is the foundation of any strong team. It is not something that comes overnight nor easily. A strong team is built from the ground up by a group of individuals.</p>
+                    <div class="read_bt1"><a href="http://peningtonpainting.com/category/ppc-achievements/">Read More</a></div>
                 </div>
                 <div class="col-sm-4">
                     <div class="blog_img"><img src="~/images/blog-img.png"></div>
-                    <h4 class="date_text">01 May</h4>
+                    <h4 class="date_text">15 oct</h4>
                     <h4 class="safety_text">How does WordPress blog work</h4>
-                    <p class="ipsum_text">vLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-                    <div class="read_bt1"><a href="#">Read More</a></div>
+                    <p class="ipsum_text">Asian Paints is India's leading paint and decor company and ranked among the top ... of certain conditions precedent and achievement of financial targets.</p>
+                    <div class="read_bt1"><a href="https://www.asianpaints.com/about-us.html">Read More</a></div>
                 </div>
             </div>
         </div>
@@ -86,17 +84,17 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footeer_logo"><img src="~/images/logo.png"></div>
-                    <p class="lorem_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                    <p class="lorem_text">The Paints and Coatings Industry is one of the most heavily regulated industries in the world.</p>
                 </div>
                 <div class="col-lg-3">
                     <h4 class="footer_taital">Discover</h4>
                     <div class="footer_menu">
                         <ul>
-                            <li><a href="#">Discover</a></li>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Categories</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
+                            <li><a href="https://www.dnb.com/business-directory/company-information.paint_coating_and_adhesive_manufacturing.in.west_bengal.html">Discover</a></li>
+                            <li><a asp-controller="Design" asp-action="Index">Home</a></li>
+                            <li><a href="https://5.imimg.com/data5/HQ/BP/MY-811127/colorchart-500x500.jpg">Categories</a></li>
+                            <li><a asp-controller="Design" asp-action="About">About Us</a></li>
+                            <li><a asp-controller="Design" asp-action="Contact">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
