--- a/Mvc/Views/Design/About.cshtml
+++ b/Mvc/Views/Design/About.cshtml
@@ -9,34 +9,11 @@
 
 
 
-<div class="call_text_main">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Location</span></a></div>
-            </div>
-            <div class="col-md-4">
-                <div class="header_social_icon">
-                    <ul>
-                        
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">+91 9159880640</span></a></div>
-            </div>
-        </div>
-    </div>
-</div>
 <!-- header section start -->
 <div class="header_section">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="images/logo.png"></a>
+            <a class="navbar-brand" href="index.html"><img src="~/images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -75,8 +52,8 @@
             <div class="col-md-7">
                 <div class="about_taital_main">
                     <h1 class="about_taital">About Agency</h1>
-                    <p class="about_text">adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
-                    <div class="readmore_bt"><a href="#">Read More</a></div>
+                    <p class="about_text">It is the largest paint manufacturing company in India. With over 2.7 billion dollars of revenue, the company has a presence in almost 19 countries around the globe. It was established by 4 friends in 1992 with a dream to make Painto the biggest paint company in the world.</p>
+                    <div class="readmore_bt"><a href="https://www.javatpoint.com/top-10-paint-companies-in-india#:~:text=Asian%20paints&text=It%20is%20the%20largest%20paint,paint%20company%20in%20the%20world.">Read More</a></div>
                 </div>
             </div>
             <div class="col-md-5 padding_right0">
@@ -93,17 +70,17 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footeer_logo"><img src="~/images/logo.png"></div>
-                    <p class="lorem_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                    <p class="lorem_text">The Paints and Coatings Industry is one of the most heavily regulated industries in the world. </p>
                 </div>
                 <div class="col-lg-3">
                     <h4 class="footer_taital">Discover</h4>
                     <div class="footer_menu">
                         <ul>
-                            <li><a href="#">Discover</a></li>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Categories</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
+                            <li><a href="https://www.dnb.com/business-directory/company-information.paint_coating_and_adhesive_manufacturing.in.west_bengal.html">Discover</a></li>
+                            <li><a asp-controller="Design" asp-action="Index">Home</a></li>
+                            <li><a href="https://5.imimg.com/data5/HQ/BP/MY-811127/colorchart-500x500.jpg">Categories</a></li>
+                            <li><a asp-controller="Design" asp-action="About">About Us</a></li>
+                            <li><a asp-controller="Design" asp-action="Contact">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
