--- a/Mvc/Views/Design/Index.cshtml
+++ b/Mvc/Views/Design/Index.cshtml
@@ -4,28 +4,8 @@
 @{
 }
 
-<div class="call_text_main">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Location</span></a></div>
-            </div>
-            <div class="col-md-4">
-                <div class="header_social_icon">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">+91 9159880640</span></a></div>
-            </div>
-        </div>
-    </div>
-</div>
+
+
 <!-- header section start -->
 <div class="header_section">
     <div class="container">
@@ -33,7 +13,27 @@
             <a class="navbar-brand" href="index.html"><img src="~/images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>             
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="About">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Index">Index</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Services">Services</a>
+                    </li>
+                </ul>
+            </div>
                 <form class="form-inline my-2 my-lg-0">
                     <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                 </form>
@@ -54,28 +54,26 @@
                                 <h1 class="banner_taital">Painting <br>for your home</h1>
                                 <p class="banner_text">It is a long established fact that a reader will be distracteof a page when looking at its layout. The point of </p>
                                 <div class="btn_main">
-                                    <div class="contact_bt"><a href="#">Read More</a></div>
-                                    <div class="contact_bt active"><a href="#">Get A Quote</a></div>
+                                    <div class="contact_bt"><a href="https://www.housebeautiful.com/room-decorating/colors/g627/paint-color-ideas/">Read More</a></div>
+                                    <div class="contact_bt active"><a href="https://www.asianpaints.com/resources/tools/paint-budget-calculator.html">Get A Quote</a></div>
                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="banner_taital_main">
-                                <h1 class="banner_taital">Painting <br>for your home</h1>
-                                <p class="banner_text">It is a long established fact that a reader will be distracteof a page when looking at its layout. The point of </p>
+                                <h1 class="banner_taital">Style <br>of your home</h1>
+                                <p class="banner_text">Have you ever found yourself asking the question what are the different types of interior design styles?  </p>
                                 <div class="btn_main">
-                                    <div class="contact_bt"><a href="#">Read More</a></div>
-                                    <div class="contact_bt active"><a href="#">Get A Quote</a></div>
-                                </div>
+                                    <div class="contact_bt"><a href="https://www.decorilla.com/online-decorating/interior-design-styles-101/">Read More</a></div>
+                                 </div>
                             </div>
                         </div>
                         <div class="carousel-item">
                             <div class="banner_taital_main">
-                                <h1 class="banner_taital">Painting <br>for your home</h1>
-                                <p class="banner_text">It is a long established fact that a reader will be distracteof a page when looking at its layout. The point of </p>
+                                <h1 class="banner_taital">Painting<br>in your home</h1>
+                                <p class="banner_text">To achieve perfect home wall colour matching, try painting your ceilings the same colour as your walls. </p>
                                 <div class="btn_main">
-                                    <div class="contact_bt"><a href="#">Read More</a></div>
-                                    <div class="contact_bt active"><a href="#">Get A Quote</a></div>
+                                    <div class="contact_bt"><a href="https://www.youtube.com/watch?v=CRXCB_3gLok">Video</a></div>
                                 </div>
                             </div>
                         </div>
