--- a/Mvc/Views/Design/Services.cshtml
+++ b/Mvc/Views/Design/Services.cshtml
@@ -5,28 +5,7 @@
 }
 
 
-<div class="call_text_main">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i><span class="padding_left_15">Location</span></a></div>
-            </div>
-            <div class="col-md-4">
-                <div class="header_social_icon">
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-                        <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="call_text"><a href="#"><i class="fa fa-phone" aria-hidden="true"></i><span class="padding_left_15">+91 9159880640</span></a></div>
-            </div>
-        </div>
-    </div>
-</div>
+
 <!-- header section start -->
 <div class="header_section">
     <div class="container">
@@ -35,7 +14,26 @@
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-        
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="About">About </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Blog">Blog</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Contact">Contact</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Index">Index</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-bg-success" asp-area="" asp-controller="Design" asp-action="Services">Services</a>
+                    </li>
+                </ul>
+            </div>
                 <form class="form-inline my-2 my-lg-0">
                     <div class="serach_icon"><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></div>
                 </form>
@@ -49,36 +47,36 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h1 class="services_taital">Why Choose Us?</h1>
+                <h1 class="services_taital">Tips</h1>
             </div>
         </div>
         <div class="services_section_2">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Faux Finishes</a></div>
+                    <div class="color_bt"><a href="https://www.truevalue.com/diy-projects/post/paint-and-stain/15-faux-painting-techniques-and-ideas">Faux Finishes</a></div>
                 </div>
                 <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Water Proofing</a></div>
+                    <div class="color_bt active"><a href="https://aapkapainter-com.webpkgcache.com/doc/-/s/aapkapainter.com/waterproofing">Water Proofing</a></div>
                 </div>
                 <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Pre-Paint Demo</a></div>
+                    <div class="color_bt"><a href="https://www.youtube.com/watch?v=BvEMOXP2EDQ">Pre-Paint Demo</a></div>
                 </div>
             </div>
         </div>
         <div class="services_section_2">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Mildew Removal</a></div>
+                    <div class="color_bt active"><a href="https://www.wikihow.com/Remove-Mold-and-Mildew">Mildew Removal</a></div>
                 </div>
                 <div class="col-md-4">
-                    <div class="color_bt"><a href="#">Color Proof</a></div>
+                    <div class="color_bt"><a href="https://proofing.de/lexicon/colour-proof/">Color Proof</a></div>
                 </div>
                 <div class="col-md-4">
-                    <div class="color_bt active"><a href="#">Window Washing</a></div>
+                    <div class="color_bt active"><a href="https://www.familyhandyman.com/list/how-to-wash-windows/">Window Washing</a></div>
                 </div>
             </div>
         </div>
-        <div class="read_bt"><a href="#">Read More</a></div>
+        <div class="read_bt"><a href="https://www.nga.gov/learn/teachers/video/prints.html">Read More</a></div>
     </div>
 </div>
 <!-- services section end -->
@@ -89,17 +87,17 @@
             <div class="row">
                 <div class="col-lg-3">
                     <div class="footeer_logo"><img src="~/images/logo.png"></div>
-                    <p class="lorem_text">tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
+                    <p class="lorem_text">The Paints and Coatings Industry is one of the most heavily regulated industries in the world.</p>
                 </div>
                 <div class="col-lg-3">
                     <h4 class="footer_taital">Discover</h4>
                     <div class="footer_menu">
                         <ul>
-                            <li><a href="#">Discover</a></li>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="#">Categories</a></li>
-                            <li><a href="about.html">About Us</a></li>
-                            <li><a href="contact.html">Contacts</a></li>
+                            <li><a href="https://www.dnb.com/business-directory/company-information.paint_coating_and_adhesive_manufacturing.in.west_bengal.html">Discover</a></li>
+                            <li><a asp-controller="Design" asp-action="Index">Home</a></li>
+                            <li><a href="https://5.imimg.com/data5/HQ/BP/MY-811127/colorchart-500x500.jpg">Categories</a></li>
+                            <li><a asp-controller="Design" asp-action="About">About Us</a></li>
+                            <li><a asp-controller="Design" asp-action="Contact">Contacts</a></li>
                         </ul>
                     </div>
                 </div>
